Use java11 List.of instead of Arrays.asList